--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,10 @@
-[build]
 builder = "NIXPACKS"
 
 [deploy]
 startCommand = "node src/bot.js"
-healthcheckPath = "/"
-healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+
+[variables]
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "true"
+PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium"
