Add all bot implementation updates

--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,13 @@ builder = "NIXPACKS"
 startCommand = "node src/bot.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 
 [variables]
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "true"
-PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium"
+PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium-browser"
+NODE_ENV = "production"
+
+[build]
+env = "production"
