--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "discord.js": "^14.14.1",
+    "@discordjs/rest": "^2.2.0",
+    "discord-api-types": "^0.37.61",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
     "puppeteer": "^22.0.0",
